--- a/website/www/for-windows.html
+++ b/website/www/for-windows.html
@@ -5,7 +5,7 @@
 <html lang=en>
   <meta charset=utf-8>
 
-  <title>dbHero for PostgreSQL</title>
+  <title>dbHero for PostgreSQL & MySQL</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
@@ -37,7 +37,7 @@
       <div class='container'>
         <h1 class='color-blue'>dbHero</h1>
         <h4 class='subtitle color-dark-gray'>
-          A GUI database explorer for PostgreSQL.
+          Simple GUI database explorer for PostgreSQL & MySQL.
         </h4>
 
         <div class='callouts'>
@@ -50,26 +50,31 @@
 
         <div class='demo'>
           <div class="single-item">
-            <div class='with-shadow'><img src='./img/win-ss1.png' /></div>
-            <div class='with-shadow'><img src='./img/win-ss2.png' /></div>
-            <div class='with-shadow'><img src='./img/win-ss3.png' /></div>
-            <div class='with-shadow'><img src='./img/win-ss4.png' /></div>
+            <div class='with-shadow'><img src='./images/win-ss1.png' /></div>
+            <div class='with-shadow'><img src='./images/win-ss2.png' /></div>
+            <div class='with-shadow'><img src='./images/win-ss3.png' /></div>
+            <div class='with-shadow'><img src='./images/win-ss4.png' /></div>
           </div>
         </div>
 
       </div>
     </div>
+
+    <div>
+        <h2 class='color-light-blue text-center' style='margin-top: 20px; margin-bottom: -10px;'>Making Databases Simple</h2>
+    </div>
+
     <div class='container features'>
-      <div>
-        <h3 class='color-dark-gray'>Simple UI</h3>
-        <p>
-          Good looking and intuitive.
-        </p>
-      </div>
       <div>
         <h3 class='color-dark-gray'>Stable, fast and secure</h3>
         <p>
-          Works on your on your machine. Requests are encrypted and secure.
+          Works on your on your local machine. Requests are encrypted and secure.
+        </p>
+      </div>
+      <div>
+        <h3 class='color-dark-gray'>Simple UI</h3>
+        <p>
+          Intuitive and easy to use.
         </p>
       </div>
       <div>
