--- a/website/www/usage_stats.html
+++ b/website/www/usage_stats.html
@@ -35,11 +35,66 @@
 <script>
 var data = {{ .UsersJSON }};
 
+var osMac = 1;
+var osWin = 2;
+
+function strStartsWith(s, prefix) {
+  return s.indexOf(prefix) == 0;
+}
+
+function prettyMacVer(ver) {
+  if (strStartsWith(ver, "10.10")) {
+    return "10.10";
+  }
+  if (strStartsWith(ver, "10.11")) {
+    return "10.11";
+  }
+  return ver;
+}
+
+// http://www.jrsoftware.org/ishelp/index.php?topic=winvernotes
+function prettyWinVer(ver) {
+  if (strStartsWith(ver, "6.0.600")) {
+    return "Vista";
+  }
+  if (strStartsWith(ver, "6.0.6001")) {
+    return "Vista SP1";
+  } 
+  if (strStartsWith(ver, "6.1.7600")) {
+    return "7";
+  }
+  if (strStartsWith(ver, "6.1.7601")) {
+    return "7 SP1";
+  }
+  if (strStartsWith(ver, "6.2.9200")) {
+    return "8";
+  }
+  if (strStartsWith(ver, "6.3.9200")) {
+    return "8.1";
+  }
+  if (strStartsWith(ver, "6.3.9600")) {
+    return "8.1 update 1";
+  }
+  if (strStartsWith(ver, "10.0.")) {
+    return "10";
+  }
+  return ver;
+}
+
 function rowCb(row, data, index) {
   var v = $.timeago(data["FirstSeen"]);
   $("td:eq(4)", row).html(v);
   v = $.timeago(data["LastSeen"]);
   $("td:eq(5)", row).html(v);
+  var osType = data["Os"];
+  var osVer = data["OsVersion"]; 
+  var os = "Unknown " + osVer;
+  if (osType == osMac) {
+    os = "Mac " + prettyMacVer(osVer);
+  } else if (osType == osWin) {
+    os = "Win " + prettyWinVer(osVer);
+  }
+  $("td:eq(7)", row).html(os);
 }
 
 var g_win_users = 0;
@@ -49,12 +104,24 @@ function calc_os_stats(data) {
     var nMac = 0;
     var nWin = 0;
 
+    var n = data.length;
+    for (var i = 0; i < n; i++) {
+      var osVer = data[i].Os;
+      if (osVer == osMac) {
+        nMac += 1;
+      } else if (osVer == osWin) {
+        nWin += 1;
+      }
+    }
+
     g_win_users = nWin;
     g_mac_users = nMac;
 }
 
 function init() {
   calc_os_stats(data);
+  var nUsers = data.length;
+  var s = "Total users: " + nUsers + ". Mac: " + g_mac_users + ". Win: " + g_win_users;
 
   var opts = {
     data: data,
@@ -68,11 +135,11 @@ function init() {
       { data: "QueryCount" },
       { data: 'FirstSeen' },
       { data: "LastSeen" },
-      { data: "OsVersio" },
-      { data: "Version" }
+      { data: "Version" },
+      { data: "OsVersion" }
     ]    
   };
-
+  $('#users_count').html(s);
   $('#my_table').DataTable(opts);
 }
 
@@ -81,7 +148,9 @@ $(document).ready( function () {
 });
 </script>
 
-  <div id="hdr">Usage stats:</div>
+  <div id="hdr">
+    <span id="users_count">Total users:</span>
+  </div>
 
   <table id="my_table" class="display">
     <thead>
@@ -92,6 +161,8 @@ $(document).ready( function () {
         <th>Queries</th>
         <th>First seen</th>
         <th>Last seen</th>
+        <th>Ver</th>
+        <th>Os</th>
       </tr>
     </thead>
     <tbody>
