--- a/s/index.html
+++ b/s/index.html
@@ -13,6 +13,7 @@
   <link type="text/css" rel="stylesheet" href="/s/css/bootstrap-flatly.css"/>
   <link type="text/css" rel="stylesheet" href="/s/css/font-awesome.css"/>
   <link type="text/css" rel="stylesheet" href="/s/dist/main.css"/>
+<link rel="stylesheet" href="http://css-spinners.com/css/spinner/three-quarters.css" type="text/css">
 
   <script type="text/javascript">
     var gVersionNumber = "0.2.4";
