remove bootstrap-flatly.css and switch back to bootstrap.css, since we don't use any of its styling anyway; remove unused react-bootstrap library

--- a/s/index.html
+++ b/s/index.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Language" content="en">
 
+  <link type="text/css" rel="stylesheet" href="/s/css/bootstrap.css"/>
+  <link type="text/css" rel="stylesheet" href="/s/css/font-awesome.css"/>
+  <link type="text/css" rel="stylesheet" href="/s/dist/main.css"/>
+
   <script type="text/javascript" src="/s/js/lib/ace.js"></script>
   <script type="text/javascript" src="/s/js/lib/ace-pgsql.js"></script>
   <script type="text/javascript" src="/s/dist/bundle.js"></script>
-  <link type="text/css" rel="stylesheet" href="/s/css/bootstrap-flatly.css"/>
-  <link type="text/css" rel="stylesheet" href="/s/css/font-awesome.css"/>
-  <link type="text/css" rel="stylesheet" href="/s/dist/main.css"/>
 
   <script type="text/javascript">
     var gVersionNumber = "0.2.5";
